discussion/kv_engine/171648/171648_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50988: Introduce LimitedConcurrencyTask

Some tasks need to be able to limit how many instances run
concurrently, like CompactTask.

Add LimitedConcurrencyTask to allow task concurrency to be limited by a
cb::AwaitableSemaphore.

If multiple tasks share a semaphore, the number of these tasks running
at a given time is limited by the capacity of the semaphore.

If no semaphore tokens are available, the task will snooze().

cb::AwaitableSemaphore maintains a queue of waiters, and will notify
"blocked" tasks when tokens become available. The task will then try to
acquire a token and run immediately.

This is not currently transparent to the task - it is required that the
task call:

  bool runInner() override {
     auto guard = acquireOrWait();
     if (!guard) {
         // could not acquire a token, queued for notification.
         // already snooze()-ed forever, just return true to
         // reschedule.
         return true;
     }
     // Do concurrency-limited work
  }

However, a future refactor could avoid this by, for example,
restructuring as a mixin

 LimitedConcurrency<SomeTask> task(semaphore, ...);

allowing any `SomeTask::run()` to be wrapped.

This would allow any task to be bounded by a semaphore if necessary,
without modification.

Change-Id: Ibf069081dcff31ebd99237273d6ac1962f12ef42

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-03 15:13:50.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-03-03 15:22:09.000000000
Message: 
Patch Set 4: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-03-03 15:22:18.000000000
Message: 
Patch Set 4:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-03 15:25:32.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/15/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/15/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/15/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10: error: "platform/awaitable_semaphore.h" file not found [clang-diagnostic-error]
#include <platform/awaitable_semaphore.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/task_concurrency_test.cc:53:13: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual ~ConcurrencyTestTask() = default;
    ~~~~~~~~^
                                   override 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/task_concurrency_test.h:17:10: error: "platform/semaphore_guard.h" file not found [clang-diagnostic-error]
#include <platform/semaphore_guard.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/15/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
error: "platform/awaitable_semaphore.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/15/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/15/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\limited_concurrency_task.h(15): fatal error C1083: Cannot open include file: "platform/awaitable_semaphore.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/15/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/16/ : FAILURE

Compile error at [2022-03-03T15:16:24.329Z] ../kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/16/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/10/ : FAILURE

Compile error at [2022-03-03T15:23:46.584Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/10/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/15/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/15/ : FAILURE

Compile error at [2022-03-03T15:23:49.804Z] ../kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/15/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/15/ : FAILURE

Compile error at [2022-03-03T15:21:33.684Z] ../kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: "platform/awaitable_semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/15/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/15/ : FAILURE

Compile error at [2022-03-03T15:23:18.488Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/15/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/15/ : FAILURE

Compile error at [2022-03-03T15:19:34.181Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/limited_concurrency_task.h:15:10:
fatal error: platform/awaitable_semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/15/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14751/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-03 16:36:25.000000000
Message: 
Patch Set 4: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/21/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/21/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/23/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/23/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/21/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/21/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/18/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x46356) in pthread_cond_destroy  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/18/ )

Timeout of a CTest test [2022-03-03T16:33:02.615Z] 416/416 Test #128: ep-engine_ep_unit_tests.TaskConcurrencyTest .................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/18/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/22/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14755/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/18/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/13/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/18/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/18/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/18/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
